[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/Enemy/enemy_stand_by_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile008.png" type="Texture" id=3]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile007.png" type="Texture" id=4]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile002.png" type="Texture" id=5]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile000.png" type="Texture" id=6]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile003.png" type="Texture" id=7]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile004.png" type="Texture" id=8]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile005.png" type="Texture" id=9]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile001.png" type="Texture" id=10]
[ext_resource path="res://Sprites/life_bar/life_bar_under_2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/life_bar/over.png" type="Texture" id=12]
[ext_resource path="res://Sprites/life_bar/progress.png" type="Texture" id=13]
[ext_resource path="res://Scripts/life bar.gd" type="Script" id=14]
[ext_resource path="res://audio/Enemy_sound/Squicking ennemy 1.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile012.png" type="Texture" id=16]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile001.png" type="Texture" id=17]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile010.png" type="Texture" id=18]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile014.png" type="Texture" id=19]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile006.png" type="Texture" id=20]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile011.png" type="Texture" id=21]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile009.png" type="Texture" id=22]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile015.png" type="Texture" id=23]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/tile013.png" type="Texture" id=24]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile007.png" type="Texture" id=25]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile009.png" type="Texture" id=26]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile002.png" type="Texture" id=27]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile005.png" type="Texture" id=28]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile003.png" type="Texture" id=29]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile000.png" type="Texture" id=30]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile004.png" type="Texture" id=31]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile006.png" type="Texture" id=32]
[ext_resource path="res://Sprites/temp_player_and_enemy/Carrot/death/tile008.png" type="Texture" id=33]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stand_by",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 23 ) ],
"loop": true,
"name": "walking",
"speed": 20.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 10 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 33 ), ExtResource( 26 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 22.3969

[sub_resource type="Animation" id=3]
resource_name = "base"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "damage_income"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.198425, -14.485 )
frames = SubResource( 1 )
animation = "walking"
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Life_bar" type="TextureProgress" parent="."]
margin_left = -19.6031
margin_top = -27.6976
margin_right = 20.3969
margin_bottom = -17.6976
rect_scale = Vector2( 1, 0.7 )
texture_under = ExtResource( 11 )
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 13 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life_bar_visibility_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Damage_taken" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = 10.0
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "base"
anims/base = SubResource( 3 )
anims/damage_income = SubResource( 4 )
[connection signal="health_updated" from="." to="Life_bar" method="_on_Enemy_health_updated"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Life_bar_visibility_timer" to="Life_bar" method="_on_Life_bar_visibility_timer_timeout"]
